--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,17 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="./assets/modules/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/modules/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="/assets/modules/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/modules/fontawesome/css/all.min.css">
 
-    <link rel="stylesheet" href="./assets/modules/jqvmap/dist/jqvmap.min.css">
-<link rel="stylesheet" href="./assets/modules/summernote/summernote-bs4.css">
-<link rel="stylesheet" href="./assets/modules/owlcarousel2/dist/assets/owl.carousel.min.css">
-<link rel="stylesheet" href="./assets/modules/owlcarousel2/dist/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/assets/modules/jqvmap/dist/jqvmap.min.css">
+<link rel="stylesheet" href="/assets/modules/summernote/summernote-bs4.css">
+<link rel="stylesheet" href="/assets/modules/owlcarousel2/dist/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="/assets/modules/owlcarousel2/dist/assets/owl.theme.default.min.css">
 
 <!-- Template CSS -->
-<link rel="stylesheet" href="./assets/css/style.min.css">
-<link rel="stylesheet" href="./assets/css/components.min.css">
+<link rel="stylesheet" href="/assets/css/style.min.css">
+<link rel="stylesheet" href="/assets/css/components.min.css">
 
 
     <title>Khassbazzar</title>
@@ -35,24 +35,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
- 
-
-<script src="./assets/bundles/lib.vendor.bundle.js"></script>
-<script src="./js/CodiePie.js"></script>
-
+<script src="/assets/bundles/lib.vendor.bundle.js"></script>
+<script src="/js/CodiePie.js"></script>
 <!-- JS Libraies -->
-<script src="./assets/modules/jquery.sparkline.min.js"></script>
-<script src="./assets/modules/chart.min.js"></script>
-<script src="./assets/modules/owlcarousel2/dist/owl.carousel.min.js"></script>
-<script src="./assets/modules/summernote/summernote-bs4.js"></script>
-<script src="./assets/modules/chocolat/dist/js/jquery.chocolat.min.js"></script>
-
+<script src="/assets/modules/jquery.sparkline.min.js"></script>
+<script src="/assets/modules/chart.min.js"></script>
+<script src="/assets/modules/owlcarousel2/dist/owl.carousel.min.js"></script>
+<script src="/assets/modules/summernote/summernote-bs4.js"></script>
+<script src="/assets/modules/chocolat/dist/js/jquery.chocolat.min.js"></script>
 <!-- Page Specific JS File -->
-<script src="./js/page/index.js"></script>
-
+<script src="/js/page/index.js"></script>
 <!-- Template JS File -->
-<script src="./js/scripts.js"></script>
-<script src="./js/custom.js"></script>
-
+<script src="/js/scripts.js"></script>
+<script src="/js/custom.js"></script>
 </body>
 </html>
